Switched to returning dict from steps

--- a/nbs/export_named.ipynb
+++ b/nbs/export_named.ipynb
@@ -26,7 +26,7 @@
    "source": [
     "# export\n",
     "\n",
-    "# some line comment\n",
+    "\n",
     "import os\n",
     "import re\n",
     "from pathlib import Path\n",
@@ -34,12 +34,25 @@
     "import nbdev\n",
     "import nbformat\n",
     "from fastcore.script import call_parse\n",
-    "from nbdev.export import (Config, _add2all, _deal_import, _from_future_import,\n",
-    "                          _is_external_export, _mk_flag_re, _re_blank_export,\n",
-    "                          _re_mod_export, check_re, export_names, extra_add,\n",
-    "                          find_default_export, get_nbdev_module,\n",
-    "                          notebook2script, read_nb, save_nbdev_module,\n",
-    "                          split_flags_and_code)\n",
+    "from nbdev.export import (\n",
+    "    Config,\n",
+    "    _add2all,\n",
+    "    _deal_import,\n",
+    "    _from_future_import,\n",
+    "    _is_external_export,\n",
+    "    _mk_flag_re,\n",
+    "    _re_blank_export,\n",
+    "    _re_mod_export,\n",
+    "    check_re,\n",
+    "    export_names,\n",
+    "    extra_add,\n",
+    "    find_default_export,\n",
+    "    get_nbdev_module,\n",
+    "    notebook2script,\n",
+    "    read_nb,\n",
+    "    save_nbdev_module,\n",
+    "    split_flags_and_code,\n",
+    ")\n",
     "from nbformat import NotebookNode"
    ]
   },
@@ -288,42 +301,6 @@
     "    nbdev.export._notebook2script = _sciflow_notebook2script\n",
     "    notebook2script(recursive=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Converted data_handlers.ipynb.\n",
-      "Converted export_named.ipynb.\n",
-      "Converted index.ipynb.\n",
-      "Converted metaflow.ipynb.\n",
-      "Converted packaging.ipynb.\n",
-      "Converted params.ipynb.\n",
-      "Converted parse_module.ipynb.\n",
-      "Converted scilint.ipynb.\n",
-      "Converted test_data_handling.ipynb.\n",
-      "Converted test_export.ipynb.\n",
-      "Converted test_module.ipynb.\n",
-      "Converted test_top2vec.ipynb.\n",
-      "Converted utils.ipynb.\n"
-     ]
-    }
-   ],
-   "source": [
-    "sciflow_build_lib()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -331,6 +308,18 @@
    "display_name": "Python [conda env:jovyan-discovery]",
    "language": "python",
    "name": "conda-env-jovyan-discovery-py"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
