--- a/nbs/lake_observer.ipynb
+++ b/nbs/lake_observer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,18 +24,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -43,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,22 +42,24 @@
     "import json\n",
     "import os\n",
     "import os.path\n",
-    "import re\n",
     "\n",
     "import boto3\n",
     "import pandas as pd\n",
-    "from sacred.commandline_options import cli_option\n",
     "from sacred.dependencies import get_digest\n",
     "from sacred.observers.base import RunObserver\n",
     "from sacred.serializer import flatten\n",
-    "from text_discovery.s3_utils import (delete_dir, is_valid_bucket,\n",
-    "                                     list_s3_subdirs, objects_exist_in_dir,\n",
-    "                                     s3_join)"
+    "from text_discovery.s3_utils import (\n",
+    "    delete_dir,\n",
+    "    is_valid_bucket,\n",
+    "    list_s3_subdirs,\n",
+    "    objects_exist_in_dir,\n",
+    "    s3_join,\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +365,7 @@
     "@ex.config\n",
     "def my_config():\n",
     "    recipient = \"test\"\n",
-    "    message = \"Hello %s!\" % recipient\n",
+    "    \"Hello %s!\" % recipient\n",
     "\n",
     "\n",
     "@ex.main\n",
@@ -386,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -394,8 +387,8 @@
      "output_type": "stream",
      "text": [
       "INFO:test-lake-obs:Running command 'my_main'\n",
-      "INFO:test-lake-obs:Started run with ID \"5\"\n",
-      "INFO:test-lake-obs:Completed after 0:00:00\n"
+      "INFO:test-lake-obs:Started run with ID \"12\"\n",
+      "INFO:test-lake-obs:Completed after 0:00:01\n"
      ]
     },
     {
@@ -408,21 +401,23 @@
     {
      "data": {
       "text/plain": [
-       "<sacred.run.Run at 0x7f936ab3bd10>"
+       "<sacred.run.Run at 0x7fa906083cd0>"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# slow\n",
+    "\n",
     "ex.run()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +436,7 @@
     "@ex.config\n",
     "def my_config():\n",
     "    recipient = \"test\"\n",
-    "    message = \"Hello %s!\" % recipient\n",
+    "    \"Hello %s!\" % recipient\n",
     "\n",
     "\n",
     "@ex.main\n",
@@ -451,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +454,7 @@
      "output_type": "stream",
      "text": [
       "INFO:test-empty:Running command 'my_main'\n",
-      "INFO:test-empty:Started run with ID \"1\"\n",
+      "INFO:test-empty:Started run with ID \"6\"\n",
       "INFO:test-empty:Completed after 0:00:00\n"
      ]
     },
@@ -473,57 +468,26 @@
     {
      "data": {
       "text/plain": [
-       "<sacred.run.Run at 0x7f936aae7090>"
+       "<sacred.run.Run at 0x7fa9052e3590>"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# slow\n",
+    "\n",
     "ex.run()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# delete_dir doesn't seem to always work.. why not?\n",
-    "# import boto3\n",
-    "\n",
-    "# s3_res = boto3.resource(\"s3\")\n",
-    "# bucket = s3_res.Bucket(bucket_name)\n",
-    "# bucket.objects.filter(Prefix=test_key_prefix).delete()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 108,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# export\n",
-    "@cli_option(\"-L\", \"--lake\")\n",
-    "def lake_option(args, run):\n",
-    "    \"\"\"Add a Data Lake observer to the experiment.\n",
-    "\n",
-    "    The argument value should be `s3://<bucket>/path/to/exp`.\n",
-    "    \"\"\"\n",
-    "    match_obj = re.match(r\"s3:\\/\\/([^\\/]*)\\/(.*)\", args)\n",
-    "    if match_obj is None or len(match_obj.groups()) != 2:\n",
-    "        raise ValueError(\n",
-    "            \"Valid bucket specification not found. \"\n",
-    "            \"Enter bucket and directory path like: \"\n",
-    "            \"s3://<bucket>/path/to/exp\"\n",
-    "        )\n",
-    "    bucket_name, experiment_dir = match_obj.groups()\n",
-    "    run.observers.append(\n",
-    "        AWSLakeObserver(bucket_name=bucket_name, experiment_dir=experiment_dir)\n",
-    "    )"
-   ]
+   "source": []
   }
  ],
  "metadata": {
