--- a/nbs/test/test_clustering.ipynb
+++ b/nbs/test/test_clustering.ipynb
@@ -59,9 +59,10 @@
     "# export\n",
     "\n",
     "\n",
+    "from pathlib import Path\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from pathlib import Path\n",
     "from sciflow.utils import load_dremio_access"
    ]
   },
@@ -220,7 +221,8 @@
     "    button_filter = get_button_responses_filter(dremio_access)\n",
     "    user_texts = data[~data.Utterance.isin(button_filter)].copy()\n",
     "    documents = user_texts.Utterance.tolist()\n",
-    "    return documents"
+    "    results = {\"documents\": documents}\n",
+    "    return results"
    ]
   },
   {
@@ -305,7 +307,8 @@
     "\n",
     "def fit(documents, workers=workers, speed=\"fast-learn\"):\n",
     "    model = Topics(documents, workers=workers, speed=speed)\n",
-    "    return model"
+    "    results = {\"model\": model}\n",
+    "    return results"
    ]
   },
   {
@@ -495,16 +498,12 @@
     "        and word_scores_in_range\n",
     "        and as_many_items_as_topics\n",
     "    )\n",
-    "    artifacts = [os.path.join(Path('.').resolve(), \"test\", \"dataframe_artifact.csv\")]\n",
-    "    metrics = [\n",
-    "        ('mae', 100, 0),\n",
-    "        ('mae', 100, 0),\n",
-    "        ('mae', 100, 0)\n",
-    "    ]\n",
+    "    artifacts = [os.path.join(Path(\".\").resolve(), \"test\", \"dataframe_artifact.csv\")]\n",
+    "    metrics = [(\"mae\", 100, 0), (\"mae\", 100, 0), (\"mae\", 100, 0)]\n",
     "    results = {\n",
-    "        'word_summaries': word_summaries,\n",
-    "        'artifacts': artifacts,\n",
-    "        'metrics': metrics\n",
+    "        \"word_summaries\": word_summaries,\n",
+    "        \"artifacts\": artifacts,\n",
+    "        \"metrics\": metrics,\n",
     "    }\n",
     "    return results"
    ]
@@ -517,11 +516,11 @@
    "source": [
     "results = evaluate(model)\n",
     "if results:\n",
-    "    assert('artifacts' in results)\n",
-    "assert(not 'artifacts' in evaluate(model)['artifacts'])\n",
+    "    assert \"artifacts\" in results\n",
+    "assert not \"artifacts\" in evaluate(model)[\"artifacts\"]\n",
     "results = None\n",
     "if results:\n",
-    "    assert('artifacts' in results)"
+    "    assert \"artifacts\" in results"
    ]
   },
   {
