--- a/nbs/test/test_data_handling.ipynb
+++ b/nbs/test/test_data_handling.ipynb
@@ -63,7 +63,7 @@
     "    print(f\"int_param: {int_param}\")\n",
     "    print(f\"float_param: {float_param}\")\n",
     "    print(f\"str_param: {str_param}\")\n",
-    "    results = int_param, float_param, str_param\n",
+    "    results = {\"int_param\": int_param}\n",
     "    return results"
    ]
   },
