--- a/nbs/test/test_export.ipynb
+++ b/nbs/test/test_export.ipynb
@@ -68,7 +68,8 @@
     "# export\n",
     "# some other comment\n",
     "def function():\n",
-    "    return 1"
+    "    results = {\"foo\": 1}\n",
+    "    return results"
    ]
   },
   {
@@ -268,7 +269,7 @@
     "def last(some_param: None):\n",
     "    \"\"\"\n",
     "    Clean up and close connections\"\"\"\n",
-    "    one = 1\n",
+    "    one = {\"one\": 1}\n",
     "    return one"
    ]
   },
