--- a/nbs/test/test_module.ipynb
+++ b/nbs/test/test_module.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,8 +35,9 @@
     "\n",
     "def first(some_param: int):\n",
     "    print(some_param)\n",
-    "    anohter_int = some_param + 5\n",
-    "    return anohter_int"
+    "    another_int = some_param + 5\n",
+    "    results = {\"another_int\": another_int}\n",
+    "    return results"
    ]
   },
   {
