Experiments with artifacts & metrics working

--- a/nbs/test/test_clustering.ipynb
+++ b/nbs/test/test_clustering.ipynb
@@ -486,6 +486,8 @@
     "\n",
     "\n",
     "def evaluate(model):\n",
+    "    import os\n",
+    "    \n",
     "    topic_words, word_scores, topic_nums = model.get_topics(model.get_num_topics())\n",
     "\n",
     "    topic_contains_non_empty_words = all([len(tw) > 0 for tw in topic_words])\n",
@@ -498,8 +500,8 @@
     "        and word_scores_in_range\n",
     "        and as_many_items_as_topics\n",
     "    )\n",
-    "    artifacts = [os.path.join(Path(\".\").resolve(), \"test\", \"dataframe_artifact.csv\")]\n",
-    "    metrics = [(\"mae\", 100, 0), (\"mae\", 100, 0), (\"mae\", 100, 0)]\n",
+    "    artifacts = [os.path.join(Path(\".\").resolve(), \"nbs\", \"test\", \"dataframe_artifact.csv\")]\n",
+    "    metrics = [(\"mae\", 100, 0), (\"mae\", 67, 1), (\"mae\", 32, 2)]\n",
     "    results = {\n",
     "        \"word_summaries\": word_summaries,\n",
     "        \"artifacts\": artifacts,\n",
