--- a/nbs/test/test_clustering_no_params.ipynb
+++ b/nbs/test/test_clustering_no_params.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "# hide\n",
-    "# default_exp test.test_clustering"
+    "# default_exp test.test_clustering_no_params"
    ]
   },
   {
